[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-analysis"
version = "0.1.0"
description = "Pulse finding and analysis tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uproot",
    "numpy",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]